añadi el inicio de la tabla

--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
-        <h1>Portafolio Juan Camio Hernandez</h1>
+        <h1>Portafolio Juan Camilo Hernandez</h1>
 
 
     </header>
 
+    <table>
+        <tr>
+           <td>
+                <a href="https://github.com/ElxCoNe/m1_python_moodle_week_1">Actividad Moddle</a>
+           </td>
+        </tr>
+        <tr>
+            <td>
+                <a href="https://github.com/ElxCoNe/m1_python_actividad_1">Actividad 1</a>
+
+            </td>
+        </tr>
+
+        
+    </table>
 
     
 </body>
