--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         <tr>
             <td>
                 <a href="https://github.com/ElxCoNe/m1_python_actividad_1">Actividad 1</a>
+                <a href="https://github.com/ElxCoNe/m1_python_actividad_2">Actividad 2</a>
 
             </td>
+            
         </tr>
 
         
