--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+  
   <!-- HEADER -->
   <header class="site-header">
     <div class="container header-container">
@@ -17,6 +18,7 @@
         <a href="#proyectos">Proyectos</a>
         <a href="#about">Sobre mí</a>
         <a href="#contacto">Contacto</a>
+        <a href="./mascotas.html">Macota</a>
       </nav>
     </div>
   </header>
@@ -37,60 +39,81 @@
     </div>
   </section>
 
+  <section class="about" id="about">
+    <div class="container">
+      <h2>Sobre mí</h2>
+      <p>
+        Soy un estudiante de desarrollo de software con interés en
+        programación backend.
+      </p>
+    </div>
+  </section>
+
   <!-- PROYECTOS -->
   <main>
     <section class="projects" id="proyectos">
       <div class="container">
         <h2>Moddle</h2>
-        <div class="projects-grid">
-          <div class="project-card">
-            <h3>m1_python_moodle_week_1</h3>
-            <p><a href="https://github.com/ElxCoNe/m1_python_moodle_week_1">Moodle week1</a></p>
-          </div>
-          <div class="project-card">
-            <h3>m1_python_moodle_week_2</h3>
-            <p><p><a href="https://github.com/ElxCoNe/m1_python_moodle_week_2">Moodle week1</a></p></p>
-          </div>
-        </div>
+        <ul class="projects-grid">
+          <il class="project-card">
+            <h3>M1_Python_Moddle_Week_1</h3>
+            <a href="https://github.com/ElxCoNe/m1_python_moodle_week_1">Moodle week1</a>
+          </il>
+          <il class="project-card">
+            <h3>M1_Python_Moddle_Week_2</h3>
+            <a href="https://github.com/ElxCoNe/m1_python_moodle_week_2">Moodle week2</a>
+          </il>
+          <il class="project-card">
+            <h3>M1_Python_Moddle_Week_3</h3>
+            <a href="https://github.com/ElxCoNe/m1_python_moodle_week_3">Moodle week3</a>
+          </il>
+        </ul>
       </div>
     </section>
 
     <section class="projects" id="proyectos">
       <div class="container">
         <h2>Ejercicios</h2>
-        <div class="projects-grid">
-          <div class="project-card">
-            <h3>Actividad 1</h3>
-            <p><a href="https://github.com/ElxCoNe/m1_python_actividad_1">Actividad 1</a></p>
-            <a href="https://elxcone.github.io/m1_python_actividad_1/">Atividad 1 page</a>
-          </div>
-          <div class="project-card">
-            <h3>Actividad 2</h3>
-            <p><a href="https://github.com/ElxCoNe/m1_python_actividad_2">Actividad 2</a></p>
-          </div>
-          <div class="project-card">
-            <h3>Actividad 3</h3>
-            <p><a href="https://github.com/ElxCoNe/m1_python_actividad_3">Actividad 3</a></p>
-          </div>
-           <div class="project-card">
-            <h3>Actividad 4</h3>
-            <p><a href="https://github.com/ElxCoNe/m1_python_actividad_4">Actividad 4</a></p>
-          </div>            
-        </div>
+        <ul class="projects-grid">
+          <il class="project-card">
+            <h3>M1_Python_Actividad_1</h3>
+            <a href="https://elxcone.github.io/m1_python_actividad_1/">Moodle activity1</a>
+          </il>
+          <il class="project-card">
+            <h3>M1_Python_Actividad_2</h3>
+            <a href="https://github.com/ElxCoNe/m1_python_actividad_2">Moodle activity2</a>
+          </il>
+          <il class="project-card">
+            <a href="https://github.com/ElxCoNe/m1_python_actividad_3">Moodle activity3</a>
+            <h3>M1_Python_Actividad_3</h3>
+          </il>
+          <il class="project-card">
+            <h3>M1_Python_Actividad_4</h3>
+            <a href="https://github.com/ElxCoNe/m1_python_actividad_4">Moodle activity4</a>
+          </il>
+          <il class="project-card">
+            <h3>M1_Python_Actividad_5</h3>
+            <a href="https://github.com/ElxCoNe/m1_python_actividad_5">Moodle activity5</a>
+          </il>
+          <il class="project-card">
+            <h3>M1_Python_Actividad_6</h3>
+            <a href="https://github.com/ElxCoNe/m1_python_actividad_6">Moodle activity6</a>
+          </il>
+        </ul>
       </div>
     </section>
 
-    <!-- SOBRE MÍ -->
-    <section class="about" id="about">
+    <section class="contact">
       <div class="container">
-        <h2>Sobre mí</h2>
-        <p>
-          Soy un estudiante de desarrollo de software con interés en
-          programación backend.
-        </p>
+
+        <h2>CONTACTME</h2>
       </div>
     </section>
+
+
   </main>
+
+
 
   <!--FOOTER -->
   <footer class="site-footer" id="contacto">
