--- a/index.html
+++ b/index.html
@@ -1,126 +1,230 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mi portafolio</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mi portafolio</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- HEADER -->
+    <header class="site-header">
+      <div class="container header-container">
+        <h1 class="logo">MILO</h1>
 
-  
-  <!-- HEADER -->
-  <header class="site-header">
-    <div class="container header-container">
-      <h1 class="logo">MILO</h1>
-      <nav class="main-nav">
-        <a href="#inicio">Inicio</a>
-        <a href="#proyectos">Proyectos</a>
-        <a href="#about">Sobre mí</a>
-        <a href="#contacto">Contacto</a>
-        <a href="./mascotas.html">Macota</a>
-      </nav>
-    </div>
-  </header>
+        <nav class="main-nav">
+          <a href="#inicio">Inicio</a>
+          <a href="#proyectos">Proyectos</a>
+          <a href="#ejercicios">Ejercicios</a>
+          <a href="#about">Sobre mí</a>
+          <a href="#contacto">Contacto</a>
+          <a href="mascotas.html">Mascotas</a>
+        </nav>
+      </div>
+    </header>
 
-  <!-- HERO -->
-  <section class="hero" id="inicio">
-    <div class="container hero-container">
-      <div class="hero-left">
-        <h2>Hola, soy <span>Milo</span></h2>
+    <!-- HERO -->
+    <section class="hero" id="inicio">
+      <div class="container hero-container">
+        <div class="hero-left">
+          <h2>Hola, soy <span>Milo</span></h2>
+          <p id="intro-text">Desarrollador (en construcción).</p>
+
+          <div class="hero-actions">
+            <button class="btn btn-primary" id="btn-change-text" type="button">
+              Cambiar texto
+            </button>
+
+            <button class="btn btn-outline" id="btn-toggle-about" type="button">
+              Mostrar/Ocultar “Sobre mí”
+            </button>
+          </div>
+        </div>
+
+        <div class="hero-right">
+          <img src="milo-hero.png" alt="Milo programando" />
+        </div>
+      </div>
+    </section>
+
+    <!-- SOBRE MI -->
+    <section class="about" id="about">
+      <div class="container">
+        <h2>Sobre mí</h2>
         <p>
-          Desarrollador 
+          Soy un estudiante con interés en programación backend. Me gusta
+          aprender construyendo proyectos
         </p>
-        <a href="#about" class="btn btn-primary">En contrucción</a>
-      </div>
-      <div class="hero-right">
-        <img src="milo-hero.png" alt="Milo programando" />
-      </div>
-    </div>
-  </section>
-
-  <section class="about" id="about">
-    <div class="container">
-      <h2>Sobre mí</h2>
-      <p>
-        Soy un estudiante de desarrollo de software con interés en
-        programación backend.
-      </p>
-    </div>
-  </section>
-
-  <!-- PROYECTOS -->
-  <main>
-    <section class="projects" id="proyectos">
-      <div class="container">
-        <h2>Moddle</h2>
-        <ul class="projects-grid">
-          <il class="project-card">
-            <h3>M1_Python_Moddle_Week_1</h3>
-            <a href="https://github.com/ElxCoNe/m1_python_moodle_week_1">Moodle week1</a>
-          </il>
-          <il class="project-card">
-            <h3>M1_Python_Moddle_Week_2</h3>
-            <a href="https://github.com/ElxCoNe/m1_python_moodle_week_2">Moodle week2</a>
-          </il>
-          <il class="project-card">
-            <h3>M1_Python_Moddle_Week_3</h3>
-            <a href="https://github.com/ElxCoNe/m1_python_moodle_week_3">Moodle week3</a>
-          </il>
-        </ul>
       </div>
     </section>
 
-    <section class="projects" id="proyectos">
+    <main>
+      <!-- PROYECTOS -->
+      <section class="projects" id="proyectos">
+        <div class="container">
+          <h2>Moodle</h2>
+
+          <ul class="projects-grid">
+            <li class="project-card">
+              <h3>M1_Python_Moodle_Week_1</h3>
+              <a
+                href="https://github.com/ElxCoNe/m1_python_moodle_week_1"
+                target="_blank"
+                rel="noopener"
+              >
+                Moodle week 1
+              </a>
+            </li>
+
+            <li class="project-card">
+              <h3>M1_Python_Moodle_Week_2</h3>
+              <a
+                href="https://github.com/ElxCoNe/m1_python_moodle_week_2"
+                target="_blank"
+                rel="noopener"
+              >
+                Moodle week 2
+              </a>
+            </li>
+
+            <li class="project-card">
+              <h3>M1_Python_Moodle_Week_3</h3>
+              <a
+                href="https://github.com/ElxCoNe/m1_python_moodle_week_3"
+                target="_blank"
+                rel="noopener"
+              >
+                Moodle week 3
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- EJERCICIOS -->
+      <section class="projects" id="ejercicios">
+        <div class="container">
+          <h2>Ejercicios</h2>
+
+          <ul class="projects-grid">
+            <li class="project-card">
+              <h3>M1_Python_Actividad_1</h3>
+              <a
+                href="https://elxcone.github.io/m1_python_actividad_1/"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 1
+              </a>
+            </li>
+
+            <li class="project-card">
+              <h3>M1_Python_Actividad_2</h3>
+              <a
+                href="https://github.com/ElxCoNe/m1_python_actividad_2"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 2
+              </a>
+            </li>
+
+            <li class="project-card">
+              <h3>M1_Python_Actividad_3</h3>
+              <a
+                href="https://github.com/ElxCoNe/m1_python_actividad_3"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 3
+              </a>
+            </li>
+
+            <li class="project-card">
+              <h3>M1_Python_Actividad_4</h3>
+              <a
+                href="https://github.com/ElxCoNe/m1_python_actividad_4"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 4
+              </a>
+            </li>
+
+            <li class="project-card">
+              <h3>M1_Python_Actividad_5</h3>
+              <a
+                href="https://github.com/ElxCoNe/m1_python_actividad_5"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 5
+              </a>
+            </li>
+
+            <li class="project-card">
+              <h3>M1_Python_Actividad_6</h3>
+              <a
+                href="https://github.com/ElxCoNe/m1_python_actividad_6"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 6
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- CONTACTO (con form) -->
+      <section class="contact" id="contacto">
+        <div class="container">
+          <h2>Contacto</h2>
+          <p class="muted">¿Quieres escribirme? Déjame un mensaje:</p>
+
+          <form class="contact-form" action="#" method="post">
+            <label>
+              Nombre
+              <input
+                type="text"
+                name="nombre"
+                placeholder="Tu nombre"
+                required
+              />
+            </label>
+
+            <label>
+              Correo
+              <input
+                type="email"
+                name="email"
+                placeholder="tunombre@email.com"
+                required
+              />
+            </label>
+
+            <label>
+              Mensaje
+              <textarea
+                name="mensaje"
+                rows="5"
+                placeholder="Escribe tu mensaje..."
+                required
+              ></textarea>
+            </label>
+
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <!-- FOOTER -->
+    <footer class="site-footer">
       <div class="container">
-        <h2>Ejercicios</h2>
-        <ul class="projects-grid">
-          <il class="project-card">
-            <h3>M1_Python_Actividad_1</h3>
-            <a href="https://elxcone.github.io/m1_python_actividad_1/">Moodle activity1</a>
-          </il>
-          <il class="project-card">
-            <h3>M1_Python_Actividad_2</h3>
-            <a href="https://github.com/ElxCoNe/m1_python_actividad_2">Moodle activity2</a>
-          </il>
-          <il class="project-card">
-            <a href="https://github.com/ElxCoNe/m1_python_actividad_3">Moodle activity3</a>
-            <h3>M1_Python_Actividad_3</h3>
-          </il>
-          <il class="project-card">
-            <h3>M1_Python_Actividad_4</h3>
-            <a href="https://github.com/ElxCoNe/m1_python_actividad_4">Moodle activity4</a>
-          </il>
-          <il class="project-card">
-            <h3>M1_Python_Actividad_5</h3>
-            <a href="https://github.com/ElxCoNe/m1_python_actividad_5">Moodle activity5</a>
-          </il>
-          <il class="project-card">
-            <h3>M1_Python_Actividad_6</h3>
-            <a href="https://github.com/ElxCoNe/m1_python_actividad_6">Moodle activity6</a>
-          </il>
-        </ul>
+        <p>&copy; 2025 Milo. Todos los derechos reservados.</p>
       </div>
-    </section>
-
-    <section class="contact">
-      <div class="container">
-
-        <h2>CONTACTME</h2>
-      </div>
-    </section>
-
-
-  </main>
-
-
-
-  <!--FOOTER -->
-  <footer class="site-footer" id="contacto">
-    <div class="container">
-      <p>&copy; 2025 Milo. Todos los derechos reservados.</p>
-    </div>
-  </footer>
-
-</body>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
