feat: add m2 html y css moddle

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -91,6 +91,16 @@
               <h3>M1_Python_Moodle_Week_3</h3>
               <a
                 href="https://github.com/ElxCoNe/m1_python_moodle_week_3"
+                target="_blank"
+                rel="noopener"
+              >
+                Moodle week 3
+              </a>
+            </li>
+            <li class="project-card">
+              <h3>M2_Html_Css_Moodle_Week_3</h3>
+              <a
+                href="https://github.com/ElxCoNe/m2_html_css_moddle_3"
                 target="_blank"
                 rel="noopener"
               >
