feat: html y css exercices

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <!-- PROYECTOS -->
       <section class="projects" id="proyectos">
         <div class="container">
-          <h2>Moodle</h2>
+          <h2>Moodle python</h2>
 
           <ul class="projects-grid">
             <li class="project-card">
@@ -97,6 +97,12 @@
                 Moodle week 3
               </a>
             </li>
+          </ul>
+        </div>
+        <div class="container">
+          <h2>Moodle html-css</h2>
+
+          <ul class="projects-grid">
             <li class="project-card">
               <h3>M2_Html_Css_Moodle_Week_3</h3>
               <a
@@ -114,7 +120,7 @@
       <!-- EJERCICIOS -->
       <section class="projects" id="ejercicios">
         <div class="container">
-          <h2>Ejercicios</h2>
+          <h2>Ejercicios python</h2>
 
           <ul class="projects-grid">
             <li class="project-card">
@@ -180,6 +186,60 @@
                 rel="noopener"
               >
                 Activity 6
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="container">
+          <h2>Ejercicios Javascript</h2>
+
+          <ul class="projects-grid">
+            <li class="project-card">
+              <h3>M2_Html-css_Actividad_1</h3>
+              <a
+                href="https://github.com/ElxCoNe/M2_Html-css_Actividad1"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 1
+              </a>
+            </li>
+
+            <li class="project-card">
+              <h3>M2_Html-css_Actividad_1</h3>
+              <a
+                href="https://github.com/ElxCoNe/M2_Html-css_Actividad_2"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 2
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="container">
+          <h2>Ejercicios html-css</h2>
+
+          <ul class="projects-grid">
+            <li class="project-card">
+              <h3>M2_Html-css_Actividad_1</h3>
+              <a
+                href="https://github.com/ElxCoNe/M2_Html-css_Actividad1"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 1
+              </a>
+            </li>
+
+            <li class="project-card">
+              <h3>M2_Html-css_Actividad_1</h3>
+              <a
+                href="https://github.com/ElxCoNe/M2_Html-css_Actividad_2"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 2
               </a>
             </li>
           </ul>
