add:the las html activity

--- a/index.html
+++ b/index.html
@@ -206,13 +206,24 @@
             </li>
 
             <li class="project-card">
-              <h3>M2_Html-css_Actividad_1</h3>
+              <h3>M2_Html-css_Actividad_2</h3>
               <a
                 href="https://github.com/ElxCoNe/M2_Html-css_Actividad_2"
                 target="_blank"
                 rel="noopener"
               >
                 Activity 2
+              </a>
+            </li>
+
+            <li class="project-card">
+              <h3>M2_Html-css_Actividad_3</h3>
+              <a
+                href="https://github.com/ElxCoNe/neo-comis"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 3
               </a>
             </li>
           </ul>
