add:javascript container

--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
             </li>
           </ul>
         </div>
+        <div class="container">
+          <h2>Moodle Javascript</h2>
+
+          <ul class="projects-grid">
+            <li class="project-card">
+              <h3>M3_Javascript_Week_1</h3>
+              <a
+                href="https://github.com/ElxCoNe/m3_javascript_moddle_week1"
+                target="_blank"
+                rel="noopener"
+              >
+                Moodle week 1
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- EJERCICIOS -->
@@ -233,20 +249,19 @@
 
           <ul class="projects-grid">
             <li class="project-card">
-              <h3>M2_Html-css_Actividad_1</h3>
+              <h3>M3_Javacript_Actividad_1</h3>
               <a
-                href="https://github.com/ElxCoNe/M2_Html-css_Actividad1"
+                href="https://github.com/ElxCoNe/crud-form"
                 target="_blank"
                 rel="noopener"
               >
                 Activity 1
               </a>
             </li>
-
             <li class="project-card">
-              <h3>M2_Html-css_Actividad_1</h3>
+              <h3>M2_Html-css_Actividad_2</h3>
               <a
-                href="https://github.com/ElxCoNe/M2_Html-css_Actividad_2"
+                href="https://github.com/ElxCoNe/kfc"
                 target="_blank"
                 rel="noopener"
               >
