add: javascipt excersice

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             </li>
 
             <li class="project-card">
-              <h3>M2_Html-css_Actividad_3</h3>
+              <h3>M2_Html-css_Actividad_tren</h3>
               <a
                 href="https://github.com/ElxCoNe/neo-comis"
                 target="_blank"
@@ -259,13 +259,23 @@
               </a>
             </li>
             <li class="project-card">
-              <h3>M2_Html-css_Actividad_2</h3>
+              <h3>M3_Javascript_Actividad_2</h3>
               <a
                 href="https://github.com/ElxCoNe/kfc"
                 target="_blank"
                 rel="noopener"
               >
                 Activity 2
+              </a>
+            </li>
+            <li class="project-card">
+              <h3>M3_Javascript_Actividad_tren</h3>
+              <a
+                href="https://github.com/ElxCoNe/gamer-zone"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 3
               </a>
             </li>
           </ul>
