feat: add one activity on javascript section

--- a/index.html
+++ b/index.html
@@ -278,6 +278,16 @@
                 Activity 3
               </a>
             </li>
+            <li class="project-card">
+              <h3>M3_Javascript_Actividad_4</h3>
+              <a
+                href="https://github.com/ElxCoNe/cars-crud"
+                target="_blank"
+                rel="noopener"
+              >
+                Activity 4
+              </a>
+            </li>
           </ul>
         </div>
       </section>
