feat: add moddle javascript exercises

--- a/index.html
+++ b/index.html
@@ -129,6 +129,36 @@
                 Moodle week 1
               </a>
             </li>
+            <li class="project-card">
+              <h3>M3_Javascript_Week_2</h3>
+              <a
+                href="https://github.com/ElxCoNe/m3_javascript_moddle_week2"
+                target="_blank"
+                rel="noopener"
+              >
+                Moodle week 2
+              </a>
+            </li>
+            <li class="project-card">
+              <h3>M3_Javascript_Week_3</h3>
+              <a
+                href="https://github.com/ElxCoNe/m3_javascript_moddle_week3"
+                target="_blank"
+                rel="noopener"
+              >
+                Moodle week 3
+              </a>
+            </li>
+            <li class="project-card">
+              <h3>M3_Javascript_Week_4</h3>
+              <a
+                href="https://github.com/ElxCoNe/m3_javascript_moddle_week4"
+                target="_blank"
+                rel="noopener"
+              >
+                Moodle week 4
+              </a>
+            </li>
           </ul>
         </div>
       </section>
